# haxnews

./: Cargo.toml  README.md
config/: feeds.toml
haxnews-cli/: Cargo.toml  test_img.rs
haxnews-cli/src/: main.rs
haxnews-cli/src/commands/: mod.rs
haxnews-cli/src/tui/: app.rs  handler.rs  mod.rs  ui.rs
haxnews-core/: Cargo.toml
haxnews-core/src/: lib.rs
haxnews-core/src/api/: handlers.rs  mod.rs  responses.rs  routes.rs
haxnews-core/src/config/: loader.rs  mod.rs
haxnews-core/src/db/: mod.rs  repository.rs  tables.rs
haxnews-core/src/dedup/: engine.rs  mod.rs  scorer.rs
haxnews-core/src/feed/: fetcher.rs  mod.rs  parser.rs  test-parser.rs
haxnews-core/src/models/: feed.rs  item.rs  mod.rs
haxnews-core/src/service/: aggregator.rs  mod.rs
haxnews-core/src/utils/: hashing.rs  mod.rs  normalize.rs
