[workspace]
members = ["haxnews-core", "haxnews-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Param Jasani / Haxnation"]
rust-version = "1.95"
name = "haxnews"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
redb = "4.1.0"
toml = "1.1.2"
feed-rs = "2.0"
reqwest = { version = "0.13.4", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
