[package]
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
name = "haxnews-core"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
redb = { workspace = true }
toml = { workspace = true }
feed-rs = { workspace = true }
reqwest = { workspace = true }
sha2 = "0.11"
hex = "0.4"
strsim = "0.11"

[[example]]
name = "test-parser"
path = "src/feed/test-parser.rs"